<resources>
    <string name="app_name">Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="more_info">more info</string>
    <string name="carbos">carbos</string>
    <string name="fats">fats</string>
    <string name="proteins">proteins</string>
    <string name="image_fullscreen">image fullscreen</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="headline">headline</string>
    <string name="calories">calories</string>
    <string name="time">time in minutes</string>
    <string name="difficulty">difficulty</string>
    <string name="select_image">select image</string>
    <string name="add">Save</string>
    <string name="recipe">Recipe</string>
</resources>